--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -1,11 +1,35 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-8">
-            <div class="">
-                {{ context }} 
-            </div>
-            
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <form class="form f-col" #f="ngForm" (submit)="authenticateUser(f)">
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" class="form-control" #email="ngModel" [(ngModel)]="user.username" pattern="a-z@." required>
+                    <span class="text-danger" *ngIf="email.invalid">
+                        Email is Required!
+                    </span>
+                </div>
+
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" class="form-control" #password="ngModel" [(ngModel)]="user.password" required>
+                    <span class="text-danger" *ngIf="password.invalid">
+                        Password is Required!
+                    </span>
+                </div>
+
+                <div *ngIf="context === 'Register'">              
+                    <div class="form-group">
+                        <label for="confirmPassword">Confirm Password</label>
+                        <input type="password" name="confirmPassword" class="form-control" #confirmPassword="ngModel" [(ngModel)]="user.confirmPassword" required>
+                    </div>
+                </div>
+                <a class="button space-bottom-5" (click)="switchForm()">{{ goToLink }}</a>
+                <input type="submit" name="submit" class="form-control" value="{{ context }}" [disabled]="f.invalid" />
+            </form>
         </div>
+        <div class="col-md-3"></div>
     </div>
 </div>
 
