--- a/src/app/pages/shared/header/header.component.html
+++ b/src/app/pages/shared/header/header.component.html
@@ -1,22 +1,53 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
-            <header>
-                <div class="flex-area container">
-                    <div class="space-right-side">
-                        <a class="only-above-1280">Login</a>
-                        <div class="only-below-1280" classToAlter="burger-nav">
-                            <div class="line"></div>
-                            <div class="line"></div>
-                            <div class="line"></div>
-                        </div>
-                        <div class="burger-nav remove-me">
-                            <h1>works</h1>
-                        </div>
-                    </div>
+        <div class="col-xl">
+            <header class="bottom-shadow">
+                <div class="f-row align-center-if-row space-left-right-40">
+
                     <div class="logo">
-                        Logo
-                    </div>                    
+                        <div class="button">Logo</div>
+                    </div>
+
+                    <div class="f-row align-center-if-row">
+                        <div class="f-row space-right-10 ">
+                            <div class="button" routerLink="/account/login">Login</div>
+                        </div>    
+                        <!-- burger btn -->
+                        <div class="display-below-1280 btn-toggle f-row button" classToAlter="burger-nav-pane">
+                            <div class="line"></div>
+                            <div class="line"></div>
+                            <div class="line"></div>
+                        </div>
+                        <!-- burger btn end -->
+
+                                            
+                    </div>
+
+                    <!-- nav pane from burger -->
+                    <div class="burger-nav-pane hide nav-pane-color position-ab display-below-1280">
+                        <ul class="list">
+                            <li class="list-item">Lorem ipsum</li>
+                            <li class="list-item">Lorem ipsum</li>
+                            <li class="list-item">Lorem ipsum</li>
+                            <li class="list-item">Lorem ipsum</li>
+                            <li class="list-item">Lorem ipsum</li>
+                            <li class="list-item">Lorem ipsum</li>
+                        </ul>
+                    </div>
+                    <!-- nav pane from burger end -->
+
+                    <!-- nav desktop -->
+                    <div class="display-above-1280 desktop-nav position-ab-btm top-shadow">
+                        <ul class="f-row">
+                            <li class="list-item">Analytics</li>
+                            <li class="list-item">Analytics</li>
+                            <li class="list-item">Analytics</li>
+                            <li class="list-item">Analytics</li>
+                            <li class="list-item">Analytics</li>
+                            <li class="list-item">Analytics</li>
+                        </ul>
+                    </div>
+                    <!-- nav desktop end -->
                 </div>
             </header>
         </div>
