--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-$fontColor: rgb(43, 43, 43);
-$backgroundColor: white;
-$above-1280: block;
-$below-1280: none;
+@import './app/scss/vars.scss';
+@import './app/scss/mixins.scss';
+@import './app/scss/classes.scss';
+@import './app/scss/queries.scss';
+
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
@@ -17,43 +18,13 @@ $below-1280: none;
 
 a, a:hover {
     text-decoration: none;
-    color: $fontColor;
+}
+
+.button {
+    cursor: pointer;
 }
 
 li {
     list-style-type: none;
-}
-
-//Resuable css classes
-
-.flex-area {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.logo {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.only-below-1280 {
-    display: none;
-}
-
-.only-above-1280 {
-    display: block;
-}
-
-//media queries
-@media (max-width: 1280px) {
-    .only-below-1280 {
-        display: block;
-    }
-    
-    .only-above-1280 {
-        display: none;
-    }
 }
 
