--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,1 +1,9 @@
-<p>error works!</p>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="error f-col">
+            <h2>{{ error.status }}</h2>
+            <p>{{ error.error.title }}</p>
+            <div class="error-img"></div>            
+        </div>
+    </div>
+</div>
