--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -2,28 +2,7 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <form class="form f-col" #f="ngForm" (submit)="authenticateUser(f)">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" name="email" class="form-control" #email="ngModel" [(ngModel)]="user.username" pattern="a-z@." required>
-  
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" class="form-control" #password="ngModel" [(ngModel)]="user.password" required>
-
-                </div>
-
-                <div *ngIf="context === 'Register'">              
-                    <div class="form-group">
-                        <label for="confirmPassword">Confirm Password</label>
-                        <input type="password" name="confirmPassword" class="form-control" #confirmPassword="ngModel" [(ngModel)]="user.confirmPassword" required>
-                    </div>
-                </div>
-                <a class="button space-bottom-5" (click)="switchForm()">{{ goToLink }}</a>
-                <input type="submit" name="submit" class="form-control" value="{{ context }}" [disabled]="f.invalid" />
-            </form>
+            <app-sign-on-form></app-sign-on-form>    
         </div>
         <div class="col-md-3"></div>
     </div>
