--- a/src/app/pages/shared/header/header.component.scss
+++ b/src/app/pages/shared/header/header.component.scss
@@ -1,39 +1,4 @@
 /* general */
-
-/* button that toggles */
-
-.line {
-    height: 2px;
-    width: 20px;
-    background: rgb(57, 57, 57);
-    margin-top: 2px;
-}
-
-.line-1 {
-    opacity: 0.4;
-    transform: rotate(-60deg);
-}
-.line-2 {
-    opacity: 0;
-}
-.line-3 {
-    transform: rotate(60deg);
-}
-
-
-/* nav pane from burger */
-.burger-nav-pane {
-    width: 300px;
-    height: 100vh;
-}
-
-.list {
-    text-align: center;
-    margin: auto;
-}
-
-/* desktop nav */
-.desktop-nav {
-    width: 100vw;
-    padding-top: 5px;
+.profile-tab-width {
+    width: 80px;
 }
