--- a/src/app/scss/classes.scss
+++ b/src/app/scss/classes.scss
@@ -1,6 +1,10 @@
 //Resuable css classes
 /* abstract */
 
+.point {
+    cursor: pointer;
+}
+
 .align-center-if-row {
     justify-content: space-between;
     align-items: center;
@@ -29,8 +33,20 @@
     align-content: flex-end;
 }
 
+.space-top-5 {
+    margin-top: 5px;
+}
+
+.space-top-8 {
+    margin-top: 8px;
+}
+
 .space-left-right-40 {
     margin: 0 40px;
+}
+
+.space-right-20 {
+    margin-right: 20px;
 }
 
 .space-right-10 {
@@ -70,6 +86,14 @@
 
 /* More Specific */
 
+.position-ab-p {
+    @include customPostion(absolute, 5px, 80px, unset, unset);
+}
+
+.link {
+    @extend .point;
+}
+
 .nav-pane-color {
     background: $navPaneColor;
 }
@@ -79,7 +103,6 @@
     font-weight: bold;
     @include flex(1);
 }
-
 
 .list-item {
     margin: auto;
